--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
 
+
+spring.profiles.include=oauth
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.h2.console.enabled=true
 spring.session.store-type=jdbc
 
-spring.security.oauth2.client.registration.google.client-id=test
-spring.security.oauth2.client.registration.google.client-secret=test
-spring.security.oauth2.client.registration.google.scope=profile, email
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mariadb://freelec-springboot2-webservice.cqwacy7ycrhg.ap-northeast-2.rds.amazonaws.com:3306/freelec_springboot2_webservice
+spring.datasource.username=hdo03072
+spring.datasource.password=dlgustmd142
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+#spring.security.oauth2.client.registration.google.client-id=test
+#spring.security.oauth2.client.registration.google.client-secret=test
+#spring.security.oauth2.client.registration.google.scope=profile, email
