--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,6 @@ spring.datasource.username=hdo03072
 spring.datasource.password=dlgustmd142
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-#spring.security.oauth2.client.registration.google.client-id=test
-#spring.security.oauth2.client.registration.google.client-secret=test
-#spring.security.oauth2.client.registration.google.scope=profile, email
+spring.security.oauth2.client.registration.google.client-id=test
+spring.security.oauth2.client.registration.google.client-secret=test
+spring.security.oauth2.client.registration.google.scope=profile, email
