--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,28 @@
 
 
-spring.profiles.include=oauth
+#spring.profiles.include=oauth
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.h2.console.enabled=true
 spring.session.store-type=jdbc
+
+
+spring.security.oauth2.client.registration.google.client-id=676196190826-qme8bg321457v36sdsrq008tf4oam0hm.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=1FXkq_B9vkAJW-rLKFXr8p8J
+spring.security.oauth2.client.registration.google.scope=profile, email
+
+spring.security.oauth2.client.registration.naver.client-id=kAOmZMXddapuG4U8Fkaf
+spring.security.oauth2.client.registration.naver.client-secret=H0JFbQqusz
+spring.security.oauth2.client.registration.naver.redirect-uri={baseUrl}/{action}/oauth2/code/{registrationId}
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=name,email,profile_image
+spring.security.oauth2.client.registration.naver.client-name=Naver
+
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
+
 
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mariadb://freelec-springboot2-webservice.cqwacy7ycrhg.ap-northeast-2.rds.amazonaws.com:3306/freelec_springboot2_webservice
@@ -12,6 +30,3 @@ spring.datasource.username=hdo03072
 spring.datasource.password=dlgustmd142
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
-spring.security.oauth2.client.registration.google.client-id=test
-spring.security.oauth2.client.registration.google.client-secret=test
-spring.security.oauth2.client.registration.google.scope=profile, email
