--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,13 @@ branches:
 # Travis CI 서버의 Home
 cache:
   directories:
-    - '$HOME/.m2/repositoy'
+    - '$HOME/.m2/repository'
     - '$HOME/.gradle'
 
 script: "./gradlew clean build"
 
-# CI 실행 완료 시 메일로 알람
+# CI 실행 완료시 메일로 알람
+notifications:
+  email:
+    recipients:
+      - hdo03072@gmail.com
