--- a/.travis.yml
+++ b/.travis.yml
@@ -26,13 +26,9 @@ before_install:
 script: "./gradlew clean build"
 
 before_deploy:
-  - mkdir -p before-deploy # zip에 포함시킬 파일들을 담을 디렉토리 생성'
-  - cp script/*.sh before-deploy/
-  - cp appspec.yml before-deploy/
-  - cp build/libs/*.jar before-deploy/
-  - cd before-deploy && zip -r before-deploy * # before-deploy로 이동후 전체 압
-  - cd ../ && mkdir -p deploy # 상위 디렉토리로 이동후 deploy 디렉토리 생성
-  - mv before-deploy/before-deploy.zip deploy/freelec-springboot2-webservice.zip # deploy로 zip파일 이동
+    - zip -r freelec-springboot2-webservice *
+    - mkdir -p deploy
+    - mv freelec-springboot2-webservice.zip deploy/freelec-springboot2-webservice.zip
 
 deploy:
     - provider: s3
@@ -44,6 +40,17 @@ deploy:
       acl: private # zip 파일 접근을 private으로
       local_dir: deploy #before_deploy에서 생성한 디렉토리
       wait_until-deployed: true
+
+    - provider: codedeploy
+      access_key_id: $AWS_ACCESS_KEY
+      secret_access_key: $AWS_SECRET_KEY
+      bucket: freelec-springboot-build3
+      key: freelec-springboot2-webservice.zip
+      bundle_type: zip
+      application: springboot-webservice-project
+      deployment_group: freelec-springboot2-webservice-group
+      region: ap-northeast-2
+      wait-until-deployed: true
 
 # CI 실행 완료시 메일로 알람
 notifications:
