--- a/.travis.yml
+++ b/.travis.yml
@@ -1,51 +1,42 @@
 language: java
 jdk:
   - openjdk8
-
 branches:
   only:
     - master
-
-##
 # Travis CI 서버의 Home
 cache:
   directories:
     - '$HOME/.m2/repository'
     - '$HOME/.gradle'
-
-before_install:
-  #  gradle 버전 변경
-  - sudo wget https://services.gradle.org/distributions/gradle-4.10.2-bin.zip
-  - sudo unzip -qq gradle-4.10.2-bin.zip
-  - export GRADLE_HOME=$PWD/gradle-4.10.2
-  - export PATH=$GRADLE_HOME/bin:$PATH
-  - gradle -version
-  - gradle wrap
-  - chmod +x ./gradlew  # gradlew 실행 권한 부여 : Permission denied 에러 예방
-
 script: "./gradlew clean build"
+before_install:
+  - chmod +x gradlew
 
 before_deploy:
-  - zip -r freelec-springboot2-webservice *
-  - mkdir -p deploy
-  - mv freelec-springboot2-webservice.zip deploy/freelec-springboot2-webservice.zip
-
+  - mkdir -p before-deploy # zip에 포함시킬 파일들을 담을 디렉토리 생성'
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy * # before-deploy로 이동후 전체 압
+  - cd ../ && mkdir -p deploy # 상위 디렉토리로 이동후 deploy 디렉토리 생성
+  - mv before-deploy/before-deploy.zip deploy/freelec-springboot2-webservice.zip # deploy로 zip파일 이동
 deploy:
   - provider: s3
-    access_key_id: $AWS_ACCESS_KEY #Travis repo setting에 설정된 값
-    secret_access_key: $AWS_SECRET_KEY #Travis repo setting에 설정된 값
-    bucket: freelec-springboot-build3 #s3버킷
-    region: ap-northeast-2
-    skip_cleanup: true
-    acl: private # zip 파일 접근을 private으로
-    local_dir: deploy #before_deploy에서 생성한 디렉토리
-    wait_until-deployed: true
-
-  - provider: codedeploy
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
-    bucket: freelec-springboot-build3
-    key: freelec-springboot2-webservice.zip
+    bucket: freeleck-springboot-build3 # S3 버
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: private
+    local_dir: deploy
+    wait-until-deployed: true
+
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
+    secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
+    bucket: freeleck-springboot-build3 # S3 버킷
+    key: freelec-springboot2-webservice.zip # 빌드 파일을 압축해서 전달ㄹbvgd
     bundle_type: zip
     application: springboot-webservice-project
     deployment_group: freelec-springboot2-webservice-group
